Actually run our build steps

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,9 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Build project (dummy)
-      run: |
-        zip output.zip README.md
+    - name: Build project
+      run: bash -x 3.7.sh
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -27,6 +26,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./output.zip
-        asset_name: public-artifact-name.zip
+        asset_path: ./output/3.7.zip
+        asset_name: 3.7.zip
         asset_content_type: application/zip
