--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@
 on:
   push:
     tags:
-    - 'v*'
+    - '*-b*'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,6 +26,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./output/3.7.zip
-        asset_name: 3.7.zip
+        asset_path: ./dist/Python-${{ github.ref }}-android-support.${{ github.ref }}.zip
+        asset_name: Python-${{ github.ref }}-android-support.${{ github.ref }}.zip
         asset_content_type: application/zip
