Add a comment to the workflow file to assist in debugging.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,3 +1,4 @@
+# This is the DEV workflow.
 # Run this Action on creating a new tag matching "<version>-b<build>"
 # e.g., 3.7-b1
 name: Build support package
