--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-# This is the DEV workflow.
+# This is the 3.7 workflow.
 # Run this Action on creating a new tag matching "<version>-b<build>"
 # e.g., 3.7-b1
 name: Build support package
