--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,3 +1,4 @@
+# This is the MASTER workflow.
 # Run this Action on creating a new tag matching "<version>-b<build>"
 # e.g., 3.7-b1
 name: Build support package
