Build 3.6 as well as 3.7
- Create a unified `main.sh` script that can build 3.6 and 3.7.

- Create a unified `python.Dockerfile` that can build 3.6 and 3.7.

- Take command-line parameters, not environment variables, for clarity.

- Adjust `release` workflow accordingly.

- For Python 3.6, add patch from upstream Python 3.7 to include
  `sys.getandroidapilevel()` function, so that Toga can detect our
  Python build as running on Android.

- Create an empty `rubicon.zip` for compatibility with the current
  Android gradle template used by briefcase.

- Move excludes into toplevel `excludes/all` directory, where `all`
  represents the fact that the file is used to filter builds for all
  Python versions.

- Move patches into `patches/3.6` and `patches/3.7`.

- Move script to ignore some stdlib tests into `patches/all` because it
  applies to both 3.6 and 3.7.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,9 +26,7 @@ jobs:
         echo "::set-env name=PY_VERSION::${TAG_VERSION}"
         echo "::set-env name=BUILD_NUMBER::${TAG_BUILD}"
     - name: Build project
-      env:
-        BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
-      run: bash -x ${{ env.PY_VERSION }}.sh
+      run: bash -x main.sh -v ${{ env.PY_VERSION }} -n ${{ env.BUILD_NUMBER }}
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
